Updated rigs controller
