# routes/rigs.js
@@ -6,10 +6,7 @@ const rigsController = require('../controllers/rigs');
 router.get('/', rigsController.getAllRigs);
 // localhost:8080/rigs/
 
-module.exports = router;
+router.get('/:id', rigsController.getSingleRig);
+// localhost:8080/rigs/
 
-// Routes
-/**
- * @swagger
- * Rigs
- */
+module.exports = router;
